// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailObject test doesn't print any alert message 1`] = `
<div>
  <div>
    <strong>
      name
    </strong>
    <ul
      className="details"
    >
      <li
        key="key_sssssssss_k0"
      >
        <div>
          <strong>
            destination
          </strong>
          <ul
            className="details"
          >
            <li
              key="key_sssssssss_k0"
            >
              <div>
                <span>
                  <span>
                    [host]
                  </span>
                   
                  reviews
                </span>
              </div>
            </li>
            <li
              key="key_sssssssss_k1"
            >
              <div>
                <span>
                  <span>
                    [subset]
                  </span>
                   
                  v1
                </span>
              </div>
            </li>
            <li
              key="key_sssssssss_k2"
            >
              <div>
                <strong>
                  port
                </strong>
                <ul
                  className="details"
                >
                  <li
                    key="key_sssssssss_k0"
                  >
                    <div>
                      <span>
                        <span>
                          [number]
                        </span>
                         
                        22
                      </span>
                    </div>
                  </li>
                  <li
                    key="key_sssssssss_k1"
                  >
                    <div>
                      <span>
                        <span>
                          [name]
                        </span>
                         
                        ssh
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </li>
      <li
        key="key_sssssssss_k1"
      >
        <div>
          <span>
            <span>
              [weight]
            </span>
             
            85
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`DetailObject test doesn't print excluded fields 1`] = `
<div>
  <div>
    <strong>
      name
    </strong>
    <ul
      className="details"
    >
      <li
        key="key_sssssssss_k0"
      >
        <div>
          <strong>
            destination
          </strong>
          <ul
            className="details"
          >
            <li
              key="key_sssssssss_k0"
            >
              <div>
                <span>
                  <span>
                    [host]
                  </span>
                   
                  reviews
                </span>
              </div>
            </li>
            <li
              key="key_sssssssss_k1"
            >
              <div>
                <span>
                  <span>
                    [subset]
                  </span>
                   
                  v1
                </span>
              </div>
            </li>
            <li
              key="key_sssssssss_k2"
            />
          </ul>
        </div>
      </li>
      <li
        key="key_sssssssss_k1"
      >
        <div>
          <span>
            <span>
              [weight]
            </span>
             
            85
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`DetailObject test prints a nested list with all attributes in the detail 1`] = `
<div>
  <div>
    <strong>
      name
    </strong>
    <ul
      className="details"
    >
      <li
        key="key_sssssssss_k0"
      >
        <div>
          <strong>
            destination
          </strong>
          <ul
            className="details"
          >
            <li
              key="key_sssssssss_k0"
            >
              <div>
                <span>
                  <span>
                    [host]
                  </span>
                   
                  reviews
                </span>
              </div>
            </li>
            <li
              key="key_sssssssss_k1"
            >
              <div>
                <span>
                  <span>
                    [subset]
                  </span>
                   
                  v1
                </span>
              </div>
            </li>
            <li
              key="key_sssssssss_k2"
            >
              <div>
                <strong>
                  port
                </strong>
                <ul
                  className="details"
                >
                  <li
                    key="key_sssssssss_k0"
                  >
                    <div>
                      <span>
                        <span>
                          [number]
                        </span>
                         
                        22
                      </span>
                    </div>
                  </li>
                  <li
                    key="key_sssssssss_k1"
                  >
                    <div>
                      <span>
                        <span>
                          [name]
                        </span>
                         
                        ssh
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </li>
      <li
        key="key_sssssssss_k1"
      >
        <div>
          <span>
            <span>
              [weight]
            </span>
             
            85
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`DetailObject test prints an alert message 1`] = `
<div>
  <div>
    <strong>
      name
    </strong>
    <Validation
      message="Not all checks passed"
      messageColor={true}
      severity="error"
    />
    <ul
      className="details"
    >
      <li
        key="key_sssssssss_k0"
      >
        <div>
          <strong>
            destination
          </strong>
          <ul
            className="details"
          >
            <li
              key="key_sssssssss_k0"
            >
              <div>
                <span>
                  <span>
                    [host]
                  </span>
                   
                  reviews
                </span>
              </div>
            </li>
            <li
              key="key_sssssssss_k1"
            >
              <div>
                <span>
                  <span>
                    [subset]
                  </span>
                   
                  v1
                </span>
              </div>
            </li>
            <li
              key="key_sssssssss_k2"
            >
              <div>
                <strong>
                  port
                </strong>
                <ul
                  className="details"
                >
                  <li
                    key="key_sssssssss_k0"
                  >
                    <div>
                      <span>
                        <span>
                          [number]
                        </span>
                         
                        22
                      </span>
                    </div>
                  </li>
                  <li
                    key="key_sssssssss_k1"
                  >
                    <div>
                      <span>
                        <span>
                          [name]
                        </span>
                         
                        ssh
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </li>
      <li
        key="key_sssssssss_k1"
      >
        <div>
          <span>
            <span>
              [weight]
            </span>
             
            85
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
